feat[js]!: include all pokemons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <body>
   
   <main>
-    <img src="#" alt="pokemon" class="pokemon__image">
+    <!-- <img src="./images/default_pokemon.png" alt="pokemon" class="pokemon__image"> -->
+    <img src="./images/whos_that_pokemon.png" alt="pokemon" class="pokemon__image">
 
     <h1 class="pokemon__data">
       <span class="pokemon__number"></span> -
@@ -33,6 +34,7 @@
     </form>
 
     <div class="buttons">
+      <!-- &entity; == HTML ENTITITES -->
       <button class="button btn-prev">Prev &lt;</button>
       <button class="button btn-next">Next &gt;</button>
     </div>
